Ex1 en ex2 gedaan nu list met char*

--- a/ex2/Makefile
+++ b/ex2/Makefile
@@ -15,6 +15,28 @@ test :
 	@echo -e '*************************'
 	./build/dplist_test
 
+debug1 :
+	@echo -e '\n*******************************'
+	@echo -e '*** Compiling for DEBUG ***'
+	@echo -e '*******************************'
+	mkdir -p build
+	gcc dplist.c dplist_test.c -o build/dplist_test $(FLAGS) -g
+	@echo -e '\n*************************'
+	@echo -e '*** Running UNIT TEST DEBUG ***'
+	@echo -e '*************************'
+	CK_FORK=0 gdb -tui ./build/dplist_test
+
+valgrind:
+	@echo -e '\n*******************************'
+	@echo -e '*** Compiling for DEBUG ***'
+	@echo -e '*******************************'
+	mkdir -p build
+	gcc dplist.c dplist_test.c -o build/dplist_test $(FLAGS) -g
+	@echo -e '\n*************************'
+	@echo -e '*** Running UNIT TEST DEBUG ***'
+	@echo -e '*************************'
+	CK_FORK=0 valgrind --leak-check=full ./build/dplist_test
+	
 .PHONY : clean check
 
 check : $(SOURCE) $(HEADERS)
