Linked list werkt alle tests labtools geslaagd en geen memory leaks

--- a/ex3/Makefile
+++ b/ex3/Makefile
@@ -2,7 +2,7 @@ HEADERS=dplist.h
 SOURCE=dplist.c
 EXE=build/dplist
 
-FLAGS = -std=c11 -Werror -lm $(shell pkg-config --cflags --libs check)
+FLAGS = -Wall -std=c11 -Werror -lm $(shell pkg-config --cflags --libs check)
 
 test :
 	@echo -e '\n*******************************'
@@ -10,6 +10,17 @@ test :
 	@echo -e '*******************************'
 	mkdir -p build
 	gcc dplist.c dplist_test.c -o build/dplist_test $(FLAGS)
+	@echo -e '\n*************************'
+	@echo -e '*** Running UNIT TEST ***'
+	@echo -e '*************************'
+	./build/dplist_test
+
+test_debug:
+	@echo -e '\n*******************************'
+	@echo -e '*** Compiling for UNIT TEST ***'
+	@echo -e '*******************************'
+	mkdir -p build
+	gcc -D DEBUG dplist.c dplist_test.c -o build/dplist_test $(FLAGS)
 	@echo -e '\n*************************'
 	@echo -e '*** Running UNIT TEST ***'
 	@echo -e '*************************'
@@ -24,7 +35,7 @@ debug1 :
 	@echo -e '\n*************************'
 	@echo -e '*** Running UNIT TEST DEBUG ***'
 	@echo -e '*************************'
-	CK_FORK=0 gdb -tui ./build/dplist_test
+	CK_FORK=no gdb -tui ./build/dplist_test
 
 valgrind:
 	@echo -e '\n*******************************'
